# wxfetch

./: .gitignore  AGENTS.md  Cargo.toml  README.md  TAF_IMPLEMENTATION_PLAN.md  bacon.toml  clippy-report  config.toml  secrets-template.toml  taf_architecture.md  temp_invalid_config.toml
.github/workflows/: rust.yml
src/: api.rs  config.rs  main.rs  metar.rs  position.rs  taf.rs
src/metar/: clouds.rs  units.rs  wxcodes.rs
testdata/: eddk.json
tests/testdata/: eddf-taf-comprehensive.json  eddf-taf-prob-notime.json  eddf-taf-prob.json  eddk-pretty.json  edfh_pretty.json  egkk-taf-simple.json  kjfk-metar-us-units.json  kjfk-taf-fmtempo.json  kjfk-taf-temp-extremes.json  kjfk-taf-windshear.json  kjfk-taf.json  malformed-taf.json  nearest-pretty.json  nearest.json
