[package]
name = "wxfetch"
version = "1.0.0"
edition = "2021"
authors = ["Robin Arnold"]
description = "Console utility for accessing aviation weather information from the command line."
license = "Apache-2.0"
homepage = "http://www.robin-arnold.de"
repository = "https://github.com/RRArny/wxfetch"

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
clap = { version = "4.5.7", features = ["derive"] }
colored = "2"
regex = "1.10.5"
reqwest = { version = "0.12.5", features = ["json"] }
serde = "1.0.203"
serde_json = "1.0.117"
strum = { version = "0.26.3", features = ["derive", "strum_macros"] }
strum_macros = "0.26.4"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
tokio-macros = "2.3.0"
toml = "0.8.14"
